start with deriving directon
BAMN!

--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -930,6 +930,9 @@ Table \ref{tbl:dat-against-acc} shows the situation in which the dative and the 
 \footnote{
 I am not discussing the mechanics within a larger syntactic context here, but only the intuition.
 }
+\footnote{
+In Table \ref{tbl:dat-against-acc} there are two structures that both have a \tsc{rel} at their bottom. I am not assuming that there are two relative pronouns, and that one relative pronouns deletes the other one. Actually, later I will argue that relative pronoun is not a primitive feature to being with. It is merely a function that can be fulfilled by for instance definite or \tsc{wh}-expressions. \tsc{rel} here is a placeholder for something I elaborate on later.
+}
 
 \begin{table}[H]
   \center
