--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -103,7 +103,7 @@ Throughout this dissertation * stands for 'not found in natural language'. For e
 
 \begin{table}[H]
   \center
-  \caption {Summary Gothic headless relatives}
+  \caption{Summary Gothic headless relatives}
     \input{tables/gothic-grammaticality.tex}
     \label{tbl:summary-gothic}
 \end{table}
@@ -114,7 +114,7 @@ In the three instances in the upper right corner, the relative pronoun appears i
 
 \begin{table}[H]
   \center
-  \caption {Simplified summary Gothic headless relatives}
+  \caption{Simplified summary Gothic headless relatives}
     \input{tables/gothic-summary.tex}
     \label{tbl:summary-gothic-simple}
 \end{table}
@@ -426,15 +426,17 @@ The example in \ref{ex:malay-no-io2} differs from \ref{ex:malay-no-io1} in that 
 \bg. *\tbf{perempuan} \tbf{kapada} yang Ali beri {ubi kentang} itu\\
  woman to who Ali give potato that\\\flushfill{Malay, \pgcitealt{keenan1977}{71}, my boldfacing}\label{ex:malay-no-io2}
 
-% Later in this section I draw the parallel between subject and nominative, direct object and accusative and indirect object and dative \citep[after][]{caha2009}. As Malagasy does not have any overt morphological system, it does not hold that the subject corresponds to the nominative in this case.
-% Finnish is another example..
-%
-%  (12) a. Poydalla tanssinut poika oli sairas.
-%  on-table having-danced boy was sick
-%  'The boy who had danced on the table was sick.'
-%  b. Nakemani poika tanssi poydalla.
-%  I-having-seen boy danced on-table
-%  'The boy that I saw danced on the table.'
+Later in this section I draw the parallel between subject and nominative, direct object and accusative and indirect object and dative \citep[after][]{caha2009}. As Malay does not have any overt morphological system, it does not hold that the subject corresponds to the nominative and the object to the accusative.
+
+Finnish is another example of a language that allows subjects and direct objects to be relativized using a particular strategy, but not indirect objects. This strategy places the relative clause prenominally, does not use a relativization marker, and puts the predicate in the relative clause in the non-finite form \citep{keenan1977}.
+
+\ex.\label{ex:finnish-rel}
+\ag. Pöydällä tanssinut poika oli sairas.\\
+ on-table having-danced boy was sick\\
+ `The boy who had danced on the table was sick.'\label{ex:finnish-rel-sbj}
+\bg. Näkemäni poika tanssi pöydällä.\\
+ I-having-seen boy danced on-table\\
+ `The boy that I saw danced on the table.'\label{ex:finnish-rel-obj}
 
 
 
@@ -537,7 +539,7 @@ Reformulating Figure \ref{fig:agr-sub-do-io} in terms of case instead of grammat
 This formulation in terms of case rather than grammatical function works as follows for the examples I gave earlier.
 
 First, German is a language that has a particular relativization strategy for the unmarked case, as shown in \ref{ex:german-rel-subj}. The unmarked nominative case can be relativized with a reduced relative clause, but the dependent accusative case and the dative case cannot.
-Second,
+Second, Finnish is a language that has a particular relativization strategy for unmarked and dependent case, as shown in X.
 Last, Basque is a language that has a particular relativization strategy for unmarked, dependent and dative case, as shown in \ref{ex:basque-rel}. The unmarked ergative, dependent absolutive and dative case can be relativized by extraposing the head, and marking it with the invariable marker \tit{-n}.
 
 In the languages I discuss in this dissertation, I focus on languages that have nominative as unmarked case and accusative as dependent case, so Figure \ref{fig:rel-nom-acc-dat} suffices.
