--- a/stuff.tex
+++ b/stuff.tex
@@ -13,3 +13,286 @@
 \section{Polish etc}
 
 \section{Icelandic, Greek?}
+
+
+\section{Relativization in general}
+
+two features: topic and relativization
+topic = the movement
+relativization = the morpheme
+some languages have both, so it has be at least two features
+
+
+\section{Shape of relative pronoun}
+
+\subsection{Gothic}
+
+Gothic relative pronouns are built from the demonstratives plus the complementizer \tit{ei}. Under \tit{ei}, two phonological processes take place. First, \tit{s} changes into \tit{z}, e.g. in \tit{þ-ōs} to \tit{þ-ōz-ei}. Second, on bisyllabic elements, final vowels disappear e.g. \tit{þ-ata} to \tit{þ-at-ei}.
+
+\begin{table}[H]
+	\center
+	\caption {Gothic demonstratives}
+		\begin{tabular}{cccc}
+		\toprule
+							& \ac{n}.\ac{sg} 	& \ac{m}.\ac{sg}	& \ac{f}.\ac{sg}  \\
+		 						\cmidrule{2-4}
+    \ac{nom} 	& þ-ata 	 			  & sa  			  		& sō		    			\\
+    \ac{acc}	& þ-ata    	   		& þ-ana  	  	 		& þ-ō     				\\
+    \ac{dat} 	& þ-amma 		   		& þ-amma  				& þ-i-z-ái  			\\
+		\bottomrule
+    					& \ac{n}.\ac{pl}	& \ac{m}.\ac{pl}	& \ac{f}.\ac{pl}	\\
+						    \cmidrule{2-4}
+    \ac{nom} 	& þ-ō		     			&	þ-ái   					&	þ-ōs	  				\\
+    \ac{acc} 	& þ-ō    					&	þ-ans   				&	þ-ōs	   				\\
+    \ac{dat} 	& þ-áim   				&	þ-áim    				&	þ-áim   				\\
+    \bottomrule
+		\end{tabular}
+\end{table}
+
+The suffixes that appear on demonstratives are also found on 3\tsc{sg} pronouns. The only difference is that the demonstratives attach to a \tit{þ(a?)}-stem and the pronouns attach to an \tit{i}-stem. This does not hold for all forms, some seem to be suppletive.
+
+\begin{table}[H]
+	\center
+	\caption {Gothic \tsc{3sg} pronouns}
+		\begin{tabular}{cccc}
+		\toprule
+							& \ac{n}.\ac{sg} 	& \ac{m}.\ac{sg}	& \ac{f}.\ac{sg}  \\
+		 						\cmidrule{2-4}
+    \ac{nom} 	& i-ta   	 			  & i-s  			  		& si		    			\\
+    \ac{acc}	& i-ta    	   		& i-na  	  	 		& i-ja     				\\
+    \ac{dat} 	& i-mma 		   		& i-mma  			   	& i-z-ái  	  		\\
+		\bottomrule
+    					& \ac{n}.\ac{pl}	& \ac{m}.\ac{pl}	& \ac{f}.\ac{pl}	\\
+						    \cmidrule{2-4}
+    \ac{nom} 	& i-ja  					&	eis    					&	i-jōs  					\\
+    \ac{acc} 	& i-ja   					&	i-ns    				&	i-jōs 					\\
+    \ac{dat} 	& i-m     				&	i-m      				&	i-m     				\\
+    \bottomrule
+		\end{tabular}
+\end{table}
+
+
+
+
+
+
+
+\subsection{Old High German}
+
+Wouldn't we now not expect that Modern German patterns with Old High German wrt attraction in headed constructions. Yes, we would. And yes, this is exactly what we see. Paper by Bader on case attraction.
+
+
+
+\section{Two points: all or nothing}
+
+\subsection{No matches work}
+
+Italian doesnt allow any of them, because it has \tit{d, wh} as light headed relative?
+
+
+\subsection{All allow for matching ones (and syncretic ones! whuut)}
+
+First, I discuss the matching headless relatives, in which the internal and external case match.
+
+Consider the example in \ref{ex:gothicaccaccrep}, repeated from the introduction. In this example, the internal case and the external case are accusative.
+The relative clause, including the relative pronoun, is marked in gray.
+The internal case is accusative. The predicate \tit{arma} `pity' takes accusative objects.
+The external case is accusative as well. Here the predicate \tit{gaarma} `pity' takes accusative objects.
+The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in the accusative.
+
+\exg. gaarma \tcol{DG}{þan} \tcol{DG}{-ei} \tcol{DG}{arma}\\
+ pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
+ `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccaccrep}
+
+Consider the example in \ref{ex:gothicnomnom}, in which the internal case and the external case are nominative.
+The relative clause, including the relative pronoun, is marked in gray.
+The internal case is nominative. The predicate \tit{matjai} `eats' takes nominative subjects.
+The external case is nominative as well. Here the predicate \tit{gadauþnai} `die' takes nominative subjects.
+The relative pronoun \tit{sa} `who.\ac{nom}' appears in the nominative.
+
+\exg. ei \tcol{DG}{sa} \tcol{DG}{-ei} \tcol{DG}{þis} \tcol{DG}{matjai}, ni gadauþnai\\
+ that who.\ac{nom} -\ac{comp} {of this} eats\scsub{[nom]} not die\scsub{[nom]}\\
+ `that (he) who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothicnomnom}
+
+% or is this one better?
+% \exg. saei sokeib saiwala sema ganasjan, fraqisteib izai\\
+%  who seeks soul his save loses it\\
+%  `Who seeks to save his soul loses it.'\flushfill{Luk 17:33}
+
+Consider the examples in \ref{ex:gothicdatdat}, in which the internal case and the external case are dative.
+The relative clauses, including the relative pronoun, is marked in gray.
+The internal case is dative. The predicates \tit{gabaur} `tribute', \tit{mota} `custom', \tit{agis} `fear' and \tit{sweriþa} `honour' takes dative objects.
+The external case is dative as well. The same predicates as in the relative clause take dative objects.
+The relative pronouns \tit{þamm(a)} `who.\ac{dat}' appear in the dative.
+
+\ex.\label{ex:gothicdatdat}
+\ag. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{gabaur} gabaur\\
+ who.\ac{dat} -\ac{comp} tribute\scsub{[dat]} tribute\scsub{[dat]}\\
+ `tribute to (him) whom tribute is due'
+\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{mota} mota\\
+ \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{custom\scsub{[dat]}} custom\scsub{[dat]}\\
+ `custom to (him) whom custom is due'
+\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{agis} agis\\
+ \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{fear\scsub{[dat]}} fear\scsub{[dat]}\\
+ `fear (him) whom fear is due'
+\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{sweriþa} sweriþa\\
+ \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{honour\scsub{[dat]}} honour\scsub{[dat]}\\
+ `honour (him) whom honour is due' \flushfill{Gothic, \ac{rom} 13:7, after \pgcitealt{harbert1978}{339}}
+
+ So far only the diagonal line is filled. These are the matching examples, the examples in which the internal case matches the external case. The relative pronoun appears in the case which is the internal and external case. The nominative is given in \ref{ex:gothicnomnom}, the accusative in \ref{ex:gothicaccaccrep}, and the dative in \ref{ex:gothicdatdat}.
+
+ \begin{table}[H]
+   \center
+   \caption {Summary of Gothic matching headless relative data}
+     \begin{tabular}{c|c|c|c}
+       \toprule
+         \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+             & [\ac{nom}]
+             & [\ac{acc}]
+             & [\ac{dat}]
+             \\ \cmidrule{1-4}
+         [\ac{nom}]
+             & \ac{nom}
+             & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+             & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+             \\ \cmidrule{1-4}
+         [\ac{acc}]
+             & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+             & \ac{acc}
+             & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+             \\ \cmidrule{1-4}
+         [\ac{dat}]
+             & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+             & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+             & \ac{dat}
+             \\
+       \bottomrule
+     \end{tabular}
+     \label{tbl:summarygothicmatch}
+ \end{table}
+
+
+
+
+
+\section{Deriving the different languages}
+
+give only the `end point', no derivations
+
+\subsection{Old High German}
+In \ac{ohg}, proper attraction in headless relatives can be derived from headed relatives. The relative pronoun is the determiner from the main clause. Under a double-headed Cinque-analysis, it is the internal DP that is deleted.
+
+
+\ex. \tsc{dat} instead of \tsc{?}
+\ag. was allon them ando, them thar quamun at erist tuo\\
+ what all d.\tsc{dat} {do to} d.\tsc{dat} there x as first do?\\
+ `'
+
+
+
+than is im so them salte them (the M) man bi seuues Stade
+oido teuuirpit, 1370.
+
+Hon them erlscipie them thar inne uuas, 2768.
+
+allon them ando them thar quamun at erist tuo, 3435.
+
+fon them herrosten them thes hnses giuueld, 3344 C.
+
+sagda them alat them (the M) thar all giscaop, 4636. —
+
+
+
+\ex. \ac{acc} instead of \ac{nom}
+\ag. unde ne wolden níet besên den mort den dô was geschên\\
+ and not wanted not see the murder.\ac{acc} that.\ac{acc} there had happened\\
+ `and they didn't want to see the murder that had happened.' \flushfill{MHG, \ac{nib} 1391,14, \pgcitealt{behaghel1923}{756}, after \pgcitealt{pittner1995}{198}}
+
+
+
+\subsection{Modern German}
+In German, inverse attraction in headed relatives can be shown to be very different from inverse attraction in headless relatives. I am not set on an analysis yet. Under a double-headed Cinque-analysis, it is the external DP that is deleted. Grafting is also still an option.
+
+
+\subsection{Gothic}
+In Gothic, ?
+
+
+
+
+
+
+
+\chapter{OHG examples}
+
+\section{Isidor}
+
+internal: dat, external: nom?
+
+\exg. Ibu christus auur got ni uuari, \tbf{dhemu} \tbf{in} \tbf{psalmom} \tbf{chiquhedan} \tbf{uuard}\\
+wenn,falls ChristusSG.NOM aber,jedoch GottSG.NOM nicht seinSUBJ.PAST.SG.3 derMASC.SG.DAT in Psalm,LobgesangPL.DAT sprechen,singen werdenIND.PAST.SG.3\\
+`' \flushfill{\ac{ohg}, \ac{isid}}
+
+%%%%
+
+internal: nom, external, nom
+
+\exg. Dher euuuih hrinit, hrinit sines augin sehun .\\
+ der.MASC.SG.NOM ihr.PL.ACC.2 berührenIND.PRES.SG.3 berührenIND.PRES.SG.3 seinNEUT.SG.GEN.ST AugeSG.GEN PupilleSG.ACC\\
+`' \flushfill{\ac{ohg}, \ac{isid}}
+
+%%%%
+
+internal: nom, external:nom, light-headed!
+
+\exg. Innan dhiu dher quhimit, dher chisendit uuirdhit\\
+bis dass der.MASC.SG.NOM kommen.IND.PRES.SG.3  der.MASC.SG.NOM senden,schicken werden.IND.PRES.SG.3\\
+`' \flushfill{\ac{ohg}, \ac{isid}}
+
+
+\phantom{x}
+
+\section{Otfrid}
+
+internal: nom, external: dat?
+
+\exg. thia	láz	ih	themo	iz	lísit	thar\\
+dieFEM.SG.ACC	lassenIND.PRES.SG.1	ichSG.NOM.1	derMASC.SG.DAT	esNEUT.SG.ACC.3	lesenIND.PRES.SG.3	da, dort\\
+`I leave her to him who reads it' \flushfill{\ac{ohg}, \ac{otfrid}}
+
+%%%%%
+
+?
+
+Al	io	súlicha	giwúrt	so	duat	thes	géistes	giburt	thén	zi	thiu	gigángent
+then = dative plural
+dative subject in embedded clause?
+
+
+%%%%%
+
+internal: dat? external: nom?
+
+\exg. nist	themo	sér	bizeinit	noh	léides	wiht	giméinit\\
+nicht.seinIND.PRES.SG.3	derMASC.SG.DAT	Schmerz,Leid,Kummer,Unglück;SG.NOM Böses	bezeichnen,bestimmenIND.PRES.SG.3 und.nicht Leid,Schmerz,UnglückSG.GEN	Ding,etwasSG.NOM	sagen,meinen,bestimmenIND.PRES.SG.3\\
+  `' \flushfill{\ac{ohg}, \ac{otfrid}}
+
+
+%%%%%
+
+ enti	gachaufta	den	Auh	ist	galiih	himilo	rihhi	seginun	in	seu	gasezziteru
+ und	kaufenIND.PAST.SG.3		derMASC.SG.ACC		auch	seinIND.PRES.SG.3	gleich	HimmelPOS.PL.GEN	ReichSG.NOM		NetzSG.DAT		in	SeeSG.ACC		setzenP.POS.FEM.SG.DAT.ST
+
+\phantom{x}
+
+
+
+\section{Tatian}
+
+light-headed relative
+
+\exg. eno	nist	thiz	thér	then	ir	suochet	zi	arslahanne	?\\
+ etwa, nun; wohl; nicht wahr	nicht	sein	dieser, diese, dieses	der, die, das	der, die, das, wer, was	ihr	suchen	zu	erschlagen, töten\\
+ `'
+
+\phantom{x}
