--- a/thesis.tex
+++ b/thesis.tex
@@ -46,12 +46,10 @@
 
 
 \part{``Relative'' pronouns}\label{part:direction}
-\include{ohg-examples}
 \include{variation}
-\include{morphology-syntax}
+\include{relativization}
 
-\part{Details}\label{part:details}
-\include{details}
+\part{Stuff}\label{part:stuff}
 \include{stuff}
 
 \bookmarksetup{startatroot}
