--- a/variation.tex
+++ b/variation.tex
@@ -7,7 +7,8 @@ However, there is a second aspect to headless relatives, which differs across la
 
 There are languages in which both the internal and the external case can win (like Gothic). There are also languages in which only the internal case can win. Crucially, there is no language in which a case competition takes place but only the external case can win.\footnote{
 There are languages in which the external case always surfaces, no matter the internal case. These languages are for instance Old English and Old Icelandic (and maybe Greek?). I come back that in Section X.
-} A possibility that is attested is that none of the case can win, that only matching cases give a winner. I summarize this in a table:
+}
+Another possibility that is attested is that none of the case can win, that only matching cases give a winner. I summarize this in a table:
 
 \begin{table}[H]
 	\center
@@ -18,8 +19,8 @@ There are languages in which the external case always surfaces, no matter the in
 								\cmidrule{2-3}
 		Gothic OHG		&	✔										&	✔									\\
 		\ac{mg} 	& ✔			 							&	*									\\
-    Polish    & *                   & *                 \\
 		n.a.    	& *										&	✔									\\
+    Polish    & *                   & *                 \\
 		\bottomrule
 		\end{tabular}
 \end{table}
@@ -28,14 +29,108 @@ Every speaker of a language needs to learn what the pattern for its language is.
 
 People have also been describing it like this: formulation from Cinque in his book. (which is actually wrong)
 
-If it does not come from the input, where does it come from? I claim that it comes from other properties of German (or another language).
+If it does not come from the input, where does it come from? I claim that it comes from other properties of the language. In Grosu's terminology: is it derived or basic? Ideally, we would want it to be derived.
 
 A similar avenue was pursued by \citealt{himmelreich2017}. She specific languages for having different types of agree (up, down) and different types of probes (active, non-active). Doing that, she successfully derived free relatives and parasitic gaps in different languages. Grosu 1994 linked richness of inflection to liberality. He actually talked about the richness of pro.
 
 
-The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Instead, I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. To be more specific, I decompose the relative pronouns, and I determine what parts of syntactic structure they correspond to. Having independently done that, I return to the headless relatives, and I derive the facts.
+The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Instead, I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. To be more specific, I derive the different behaviors from relative pronouns. I decompose them, and I determine what parts of syntactic structure they correspond to. Having independently done that, I return to the headless relatives, and I derive the facts.
 
 
+\section{Both directions}
+
+\subsection{Gothic}
+
+\begin{table}[H]
+  \center
+  \caption{Summary Gothic headless relatives (repeated)}
+    \input{tables/gothic-summary.tex}
+    \label{tbl:summary-gothic-simple}
+\end{table}
+
+
+\subsection{Old High German}
+
+External wins.
+
+Consider the example in \ref{ex:ohg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
+The internal case is nominative. The predicate \tit{zalta} `named' takes accusative objects.
+The external case is dative. The predicate \tit{furira} `older' takes dative objects.
+The relative pronoun \tit{thên} `\ac{rel}.\ac{dat}.\ac{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
+
+\exg. bistû furira Abrâhame, ouh thên \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
+{are you} older\scsub{[dat]} {Abraham} and \tsc{rel}.\ac{dat}.\tsc{pl} one here just named\scsub{[acc]}\\
+`are you really older than Abraham and (those) who have been mentioned here?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}, after Delbrück}\label{ex:ohg-dat-acc}
+
+\exg. Bis tú nu {zi wáre} furira Ábrahame ? ouh thén man hiar nu zálta\\
+ sein du nun,jetzt wahrlich erhabener,wertvoller Abraham ? auch,und der,die,das man hier nun,jetzt erzählen,verkünden\\
+ `xxx' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33}\label{ex:ohg-dat-acc}
+
+
+Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
+The internal case is nominative. The predicate \tit{sprah} `spoke' takes nominative subjects.
+The external case is dative. The predicate \tit{antuurta} `replied' takes dative objects.
+The relative pronoun \tit{demo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case are unattested.
+
+\exg. aer antuurta demo \tbf{zaimo} \tbf{sprah}\\
+he replied\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to him} spoke\scsub{[nom]}\\
+`he replied to the one who spoke to him' \flushfill{\ac{ohg}, \ac{mons} 7:24, \pgcitealt{behaghel1923}{761}, after \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
+
+\exg. gébe themo	ni	éigi\\
+gebenSUBJ.PRES.SG.3	derMASC.SG.DAT	nicht	haben,besitzenSUBJ.PRES.SG.3\\
+`' \flushfill{\ac{ohg}, \ac{otfrid}}
+
+
+Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
+The internal case is nominative. The predicate \tit{chisetzit} `pull through' takes nominative subjects.
+The external case is accusative. The predicate \tit{bibringu} `bring to light' takes accusative objects.
+The relative pronoun \tit{dhen} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case are unattested.
+
+
+\exg. ``Ih bibringu fona iacobes samin endi fona iuda dhen mina berga chisitzit.''\\
+ich.SG.NOM.1 hervorbringen.IND.PRES.SG.1 von Jakob.SG.GEN Samuel.SG.DAT und von Judas.SG.ABL \tsc{rel.}MASC.SG.ACC mein.MASC.PL.ACC.ST Berg.PL.ACC besitzen.IND.PRES.SG.3\\
+`' \flushfill{\ac{ohg}, \ac{isid} 34:3}\label{ex:ohg-acc-nom}
+
+\exg. ih bibringu fona (iacobes samin endi) Iuda dhen \tbf{mina} \tbf{berga} \tbf{chisetzit}\\
+I {bring to light}\scsub{[acc]} about (Jacob together end?) Judas \tsc{rel}.\ac{acc}.\tsc{m}.\tsc{sg} my mountains {through pull}\scsub{[nom]}\\
+`I bright to light the one who wanders through my mountains about Jacob and end of Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom1}
+
+
+
+Internal wins.
+
+internal: acc, external: nom
+
+\exg. thíz	ist	then	sie	zéllent	joh	then	sie	sláhan	wollent	!\\
+diesesNEUT.SG.NOM	seinIND.PRES.SG.3	derMASC.SG.ACC	MASC.PL.NOM.3	erzählenIND.PRES.PL.3		und	derMASC.SG.ACC	MASC.PL.NOM.3	töten	wollenIND.PRES.PL.3\\
+
+\exg. Thiz ist [then sie zellent].\\
+ this is whom(ACC) they talk\\
+ `This is the one whom they talk about.' \flushfill{\ac{ohg}, ?}
+
+
+
+internal: dat, external: nom
+
+\exg. themo	min	uuirdit	forlazan	,	min	minnot\\
+dieser, der(selbe); diese, die; dieses, das; wer, welcher; welche; was, welches	weniger, minder	werden	erlassen, vergeben, erlauben		weniger, minder	(eifersüchtig) lieben, schätzen\\
+`Aan wie minder wordt voorgelezen, heeft minder lief.'
+
+
+
+
+\footnote{
+COUNTEREXAMPLE: int: nom, ext: acc
+
+\exg. tház	si	uns	béran	scolti	thér	unsih	gihéilti\\
+dass	sieFEM.SG.NOM.3	wirPL.DAT.1	(hervor)bringen,gebären	sollen,werdenSUBJ.PAST.SG.3	derMASC.SG.NOM	wirPL.ACC.1	rettenSUBJ.PAST.SG.3\\
+ `xxx' \flushfill{\ac{ohg}, \ac{otfrid}}
+
+ \phantom{x}
+}
 
 \section{Only internal}
 
@@ -106,7 +201,7 @@ To summarize
 
 \begin{table}[H]
   \center
-  \caption {Summary of \ac{mg} matching headless relative data}
+  \caption{Summary Modern German headless relatives}
 		\begin{tabular}{c|c|c|c}
 		  \toprule
 			\textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
@@ -134,193 +229,93 @@ To summarize
 \end{table}
 
 
+\section{Other languages}
 
 
+
+% The nativeness of the headless relative constructions under
+% consideration, and in particular those represented by group (I), can be
+% established for the moment by citing instances in which they occur independently
+% of the Greek, e.g., in which the Gothic modified relative clause
+% reflects a Greek participial construction or a noun, or instances in which
+% they occur in opposition to the Greek. Evidence of the first type is
+% found in Mk 10:32, Luk 3:13, Rom 14:19, II Cor 8:11, Col 3:2, and elsewhere.
+
+
+
+Old English, Old Icelandic both show: \tsc{d}-pronoun plus invariant relativizer + always take case from the main clause
+
+Ancient Greek also actually has both directions (see \cite{vanriemsdijk2006}), so there is actually not a language with external only + hierarchy effects
+
+
+Polish and Italian have \tsc{wh}-pronouns but do not allow for conflicts
 
 
 
 \section{Generalizations}
 
+This will be intuition later
+
 \begin{itemize}
   \item when a language's light-headed relatives are \tsc{d} - \tsc{wh}, non-matching is never allowed
   \item with \tsc{wh} morphology, the internal case can win
-  \item with \tsc{d} morphology (or is it when the relative pronoun can take a complement), both the external and the internal can win
+  \item with \tsc{d} morphology (or is it when the relative pronoun can take a complement?), both the external and the internal can win
 \end{itemize}
 
 
-\section{Two \tsc{d}-examples}
-
-\subsection{\tsc{d} in OHG}
-
-works via attraction
-
-\subsection{\tsc{d} in Gothic}
-
-does not work via attraction, but complementizer(?)
-
-
-
-
-
-
-
-
-\section{\tsc{wh} in German}
-
-show how this is different from d-relatives (the impossiblitiy for non-matching for \tsc{d} \tsc{w} light headed relative languages has to follow from this)
-
-
-
-
-
-
-
-
-\chapter*{old variation}
-
-\section{\ac{ohg} and \ac{mg} have the same winner}
-
-
-\subsection{\ac{ohg}}
-
-same holds for \ac{ohg} but you just can't give the ungrammatical examples. but they are not attested.
-
-
-
-\section{The different patterns}
-
-
-
-
-\subsection{Both: Gothic}
-
-
-\input{tables/gothic-summary.tex}
-
-
-
-
-
-
- \subsection{Only from external: Old High German}
-
-
-  \subsubsection{external is grammatical}
-
-
-Consider the example in \ref{ex:ohg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
-The internal case is nominative. The predicate \tit{zalta} `named' takes accusative objects.
-The external case is dative. The predicate \tit{furira} `older' takes dative objects.
-The relative pronoun \tit{thên} `\ac{rel}.\ac{dat}.\ac{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
-
-\exg. bistû furira Abrâhame, ouh thên \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
- {are you} older\scsub{[dat]} {Abraham} and \tsc{rel}.\ac{dat}.\tsc{pl} one here just named\scsub{[acc]}\\
- `are you really older than Abraham and (those) who have been mentioned here?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}, after Delbrück}\label{ex:ohg-dat-acc}
-
-\exg. Bis	tú	nu	{zi wáre}	furira	Ábrahame	?	ouh	thén	man	hiar	nu	zálta\\
-sein	du	nun,jetzt	wahrlich	erhabener,wertvoller	Abraham	?	auch,und	der,die,das	man	hier	nun,jetzt	erzählen,verkünden\\
-
-%% zoek voor deze!! Übersetzung in Delbrück, S. 373
-%also take his spelling
-
-
-Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
-The internal case is nominative. The predicate \tit{sprah} `spoke' takes nominative subjects.
-The external case is dative. The predicate \tit{antuurta} `replied' takes dative objects.
-The relative pronoun \tit{demo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case are unattested.
-
-\exg. aer antuurta demo \tbf{zaimo} \tbf{sprah}\\
- he replied\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to him} spoke\scsub{[nom]}\\
- `he replied to the one who spoke to him' \flushfill{\ac{ohg}, \ac{mons} 7:24, \pgcitealt{behaghel1923}{761}, after \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
-
- %check for pittner's spelling
-
-
-Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
-The internal case is nominative. The predicate \tit{chisetzit} `pull through' takes nominative subjects.
-The external case is accusative. The predicate \tit{bibringu} `bring to light' takes accusative objects.
-The relative pronoun \tit{dhen} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case are unattested.
-
-\exg. ih bibringu fona (iacobes samin endi) Iuda dhen \tbf{mina} \tbf{berga} \tbf{chisetzit}\\
- I {bring to light}\scsub{[acc]} about (Jacob together end?) Judas \tsc{rel}.\ac{acc}.\tsc{m}.\tsc{sg} my mountains {through pull}\scsub{[nom]}\\
- `I bright to light the one who wanders through my mountains about Jacob and end of Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom}
-
-
-
-
-
-
-
-%%check for hans eggers spelling
-%(Der althochdeutsche Isidor. Nach der Pariser Handschrift und den Monseer Fragmenten neu herausgegeben von Hans Eggers. Tübingen: Niemeyer 1964, S. 61 und 63)
-
-
-
-
-
-
-
-
-
-  \subsubsection{internal is ungrammatical}
-
-  \ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
-  \a. \ac{acc} not attested
-  \b. \ac{nom} not attested
-
- \ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
- \a. \ac{dat} not attested
- \b. \ac{nom} not attested
-
- \ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{acc}
- \a. \ac{dat} not attested
- \b. \ac{acc} not attested
-
-
-
-
- \begin{table}[H]
-   \center
-   \caption {Summary of \ac{ohg} matching headless relative data}
- 		\begin{tabular}{c|c|c|c}
- 		  \toprule
- 			\textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
- 		        & [\ac{nom}]
- 		        & [\ac{acc}]
- 		        & [\ac{dat}]
- 		        \\ \cmidrule{1-4}
- 		    [\ac{nom}]
- 		        &
- 		        & \ac{acc}
- 		        & \ac{dat}
- 		        \\ \cmidrule{1-4}
- 		    [\ac{acc}]
- 		        &
- 		        &
- 		        & \ac{dat}
- 		        \\ \cmidrule{1-4}
- 		    [\ac{dat}]
- 		        &
- 		        &
- 		        &
- 		        \\
- 		  \bottomrule
- 		\end{tabular}
- \end{table}
-
-
- % The nativeness of the headless relative constructions under
- % consideration, and in particular those represented by group (I), can be
- % established for the moment by citing instances in which they occur independently
- % of the Greek, e.g., in which the Gothic modified relative clause
- % reflects a Greek participial construction or a noun, or instances in which
- % 18
- % they occur in opposition to the Greek. Evidence of the first type is
- % found in Mk 10:32, Luk 3:13, Rom 14:19, II Cor 8:11, Col 3:2, and elsewhere.
-
-Old English, Old Icelandic both show: \tsc{d}-pronoun plus invariant relativizer + always take case from the main clause
-
-Polish and Italian have \tsc{wh}-pronouns but do not allow for conflicts
+\section{Relative pronouns}
+
+
+\begin{table}[H]
+	\center
+	\caption {Relative pronouns in headless relatives in \ac{mg}}
+		\begin{tabular}{ccc}
+		\toprule
+							& \ac{inan}	& \ac{an}	\\
+								\cmidrule{2-3}
+    \ac{nom} 	& w-as    	& w-er   	\\
+    \ac{acc} 	& w-as    	& w-en  	\\
+    \ac{dat} 	& -  				& w-em   	\\
+		\bottomrule
+		\end{tabular}
+\end{table}
+
+\begin{table}[H]\label{tbl:paradigmohg}
+	\center
+	\caption {Relative pronouns in headless relatives in \ac{ohg}}
+		\begin{tabular}{cccc}
+		\toprule
+							& \ac{n}.\ac{sg}	& \ac{m}.\ac{sg}  & \ac{f}.\ac{sg}	\\
+								\cmidrule{2-4}
+		\ac{nom}	& d-aȥ          	& d-ër       			& d-iu						\\
+		\ac{acc}	& d-aȥ   					& d-ën						& d-ea/-ia/(-ie)	\\
+		\ac{dat}	& d-ëmu/-ëmo	    & d-ëmu/-ëmo			& d-ëru/-ëro			\\
+		\bottomrule
+	    				& \ac{n}.\ac{pl}	& \ac{m}.\ac{pl}  	& \ac{f}.\ac{pl}	\\
+	    					\cmidrule{2-4}
+    \ac{nom} 	& d-iu/-ei   			&  d-ē/-ea/-ia/-ie	& d-eo/-io        \\
+    \ac{acc} 	& d-iu/-ei   			&  d-ē/-ea/-ia/-ie	& d-eo/-io        \\
+    \ac{dat} 	& d-ēm/-ēn   			&  d-ēm/-ēn       	& d-ēm/-ēn        \\
+    \bottomrule
+		\end{tabular}
+\end{table}
+
+\begin{table}[H]
+	\center
+	\caption {Relative pronouns in headless relatives in Gothic}
+		\begin{tabular}{cccc}
+		\toprule
+							& \ac{n}.\ac{sg} 	& \ac{m}.\ac{sg}	& \ac{f}.\ac{sg}  \\
+		 						\cmidrule{2-4}
+    \ac{nom} 	& þ-at-ei 	 			& s-a-ei 					& s-ō-ei					\\
+    \ac{acc}	& þ-at-ei    			& þ-an-ei  				& þ-ō-ei  				\\
+    \ac{dat} 	& þ-amm-ei 				& þ-amm-ei				& þ-izái-ei 			\\
+		\bottomrule
+    					& \ac{n}.\ac{pl}	& \ac{m}.\ac{pl}	& \ac{f}.\ac{pl}	\\
+						    \cmidrule{2-4}
+    \ac{nom} 	& þ-ō-ei					&	þ-ái-ei					&	þ-ōz-ei					\\
+    \ac{acc} 	& þ-ō-ei 					&	þ-anz-ei				&	þ-ōz-ei					\\
+    \ac{dat} 	& þ-áim-ei				&	þ-áim-ei 				&	þ-áim-ei 				\\
+    \bottomrule
+		\end{tabular}
+\end{table}
